.github/workflows/rollback.yml

--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -1,38 +1,27 @@
 name: Rollback Deployment
 
 on:
-  workflow_dispatch:  # This allows the workflow to be manually triggered
+  workflow_dispatch:  # Allows you to trigger manually
+
+permissions:
+  contents: read
 
 jobs:
-  rollback:
-    runs-on: ubuntu-latest  # Runs on the latest Ubuntu environment
-
+  simulate-rollback:
+    runs-on: ubuntu-latest
+    name: Simulate Rollback
     steps:
-      # Step 1: Checkout the code
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # Step 2: Set up any necessary environment (e.g., install dependencies)
-      - name: Set up Node.js (or any required environment)
-        uses: actions/setup-node@v3
-        with:
-          node-version: '14'  # Change the version as per your needs
+      - name: Echo Rollback Starting
+        run: echo "🚨 Starting rollback process..."
 
-      # Step 3: Restore to a previous commit or rollback to the prior deployment
-      - name: Rollback Deployment
+      - name: Simulate restoring previous release
         run: |
-          echo "Rolling back to previous stable deployment..."
-          # Example: Checkout a previous commit or branch
-          git checkout HEAD~1  # This is an example; adjust according to your deployment strategy
+          echo "🕰️ Rolling back to previous version..."
+          sleep 2
+          echo "✅ Rollback completed successfully!"
 
-          # Example: Deploy or push back to your server or deployment platform (e.g., AWS, Docker, etc.)
-          # If you're using AWS CLI or other deployment tools, you can add your commands here.
-          # Example (for AWS deployment):
-          # aws s3 cp ./build s3://your-bucket-name/ --recursive
-          
-          # Add any other commands needed to revert changes (e.g., redeploy to a previous environment)
-
-      # Step 4: Confirm rollback is successful
-      - name: Rollback Status
-        run: |
-          echo "Rollback complete! Verify your environment for consistency."
+      - name: Done
+        run: echo "🎉 The system has been rolled back. All services stable."
